update Taskfile.yml: add `quality:test` to quality tasks, replace `compose:restart` with `compose:stop` and `compose:up`, and include `quality:all` in init task

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -186,9 +186,9 @@ tasks:
     cmds:
       - task: quality:pint:check
       - task: quality:rector
+      - task: quality:test
       - task: quality:insights
       - task: quality:stan
-      - task: quality:test
 
   # === Композитные / Сценарные задачи ===
   init:
@@ -200,7 +200,9 @@ tasks:
       - task: app:storage-link
       - task: app:horizon-install
       - task: db:setup
-      - task: compose:restart
+      - task: compose:stop
+      - task: compose:up
+      - task: quality:all
 
   # === Утилиты ===
   echo:
